5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1793_3135.log
== TEST (2019-05-30 18:18:15) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**1/2)
	h=h+1
m=m/size(x)	
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:19:09) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**1/2)
	h=h+1
m=(m/size(x))**2	
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:19:42) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**1/2)
	h=h+1
m=(m/size(x))**2	
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:20:43) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**1/2)
	h=h+1
m=(m/size(x))	
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:21:18) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**1/2)
	h=h+1
m=(m/size(x))	
m=m**2
print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:21:36) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**1/2)
	h=h+1
m=(m/size(x))	

print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:23:04) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**1/2)
	h=h+1
m=(m/size(x))	

print(round(m,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:23:52) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**1/2)
	h=h+1
m=(m/size(x))	

print(round(m,2))
print(3.32*3.32)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:25:33) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**1/2)
	h=h+1
m=(m/size(x))	

print(round(m,2))
a=(5.5**1/2)+(11.1**1/2)+(9.8**1/2)+(5.6**1/2)+(1.25**1/2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:26:01) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**1/2)
	h=h+1
m=(m/size(x))	

print(round(m,2))
a=(5.5**1/2)+(11.1**1/2)+(9.8**1/2)+(5.6**1/2)+(1.25**1/2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:26:07) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**1/2)
	h=h+1
m=(m/size(x))	

print(round(m,2))
a=(5.5**1/2)+(11.1**1/2)+(9.8**1/2)+(5.6**1/2)+(1.25**1/2)
print(A)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:26:12) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**1/2)
	h=h+1
m=(m/size(x))	

print(round(m,2))
a=(5.5**1/2)+(11.1**1/2)+(9.8**1/2)+(5.6**1/2)+(1.25**1/2)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:26:47) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**1/2)
	h=h+1
m=(m/size(x))	

print(round(m,2))
a=(5.5**1/2)+(11.1**1/2)+(9.8**1/2)+(5.6**1/2)+(1.25**1/2)
print(a/5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:27:29) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**1/2)
	h=h+1
m=(m/size(x))	

print(round(m,2))
a=(5.5**1/2)+(11.1**1/2)+(9.8**1/2)+(5.6**1/2)+
print(a/5)
-- ERROR:
File "XXXX", line 11
    a=(5.5**1/2)+(11.1**1/2)+(9.8**1/2)+(5.6**1/2)+
                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:27:35) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**1/2)
	h=h+1
m=(m/size(x))	

print(round(m,2))
a=(5.5**1/2)+(11.1**1/2)+(9.8**1/2)+(5.6**1/2)
print(a/5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:27:56) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**1/2)
	h=h+1
m=(m/size(x))	

print(round(m,2))
a=(5.5**1/2)+(11.1**1/2)+(9.8**1/2)+(5.6**1/2)
print((a/5)**2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:28:50) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**1/2)
	h=h+1
m=(m/size(x))	

print(round(m,2))
a=(5.5**0.5)+(11.1**0.5)+(9.8**0.5)+(5.6**0.5)
print((a/5)**2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:29:20) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**1/2)
	h=h+1
m=(m/size(x))	

print(round(m,2))
a=(5.5**0.5)+(11.1**0.5)+(9.8**0.5)+(5.6**0.5)+(1.25**0.5)
print((a/5)**2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:29:59) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**0.5)
	h=h+1
m=(m/size(x))	
m=(m**2)
print(round(m,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:30:50) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**0.5)
	h=h+1
m=(m/size(x))	
m=(m**2)
print(round(m,2))

-- EXECUTION TIME:
10.9288
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
4.68
---- user output:
4.68
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
3.59
---- user output:
3.59
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
2.92
---- user output:
2.92
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:18:00) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(log(x[h]+1)
	h=h+1
m=(m/size(x))	
m=(m**2)
print(round(m,2))

	
	

-- ERROR:
File "XXXX", line 7
    h=h+1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:18:08) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(log(x[h]+1))
	h=h+1
m=(m/size(x))	
m=(m**2)
print(round(m,2))

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:20:25) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(log(x[h]+1))
	h=h+1
m=(m/size(x))	
m=(exp(m)-1)
print(round(m,2))

x=arrray(eval(input("DMASDJSAMDSA")
x[0]=x[0].upper()
-- ERROR:
File "XXXX", line 13
    x[0]=x[0].upper()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:28:09) 
-- CODE:
from numpy import*
x=array(eval(input("Digite um vetor: ")))
h=0
m=0
while(size(x)>h):
	m=m+(x[h]**0.5)
	h=h+1
m=(m/size(x))	
m=(m**2)
print(round(m,2))


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
